--- a/src/app/module/performance-metrics/performance.panel.scss
+++ b/src/app/module/performance-metrics/performance.panel.scss
@@ -7,7 +7,7 @@
 //=============================================================================
 
 .main-layout {
-  width: 1800px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
