--- a/src/app/layout/app.component.html
+++ b/src/app/layout/app.component.html
@@ -9,7 +9,7 @@
 
   <!-- Modules (doc/code editors, performance metrics, etc...) - - - - - - - - - - - - - -->
 
-  <div *ngIf="isModule()">
+  <div *ngIf="isModule()" class="module-layout">
     <router-outlet></router-outlet>
   </div>
 </div>
