--- a/src/app/layout/app.component.scss
+++ b/src/app/layout/app.component.scss
@@ -5,3 +5,14 @@
 //=== Use of this source code is governed by an MIT-style license that can be
 //=== found in the LICENSE file
 //=============================================================================
+
+.module-layout {
+  position : absolute;
+  top      : 0;
+  bottom   : 0;
+  right    : 0;
+  left     : 0;
+  margin   : 0;
+}
+
+//=============================================================================
