--- a/src/app/module/performance-metrics/chart/chart.panel.html
+++ b/src/app/module/performance-metrics/chart/chart.panel.html
@@ -24,8 +24,7 @@
 
   <!-- ============================================================================================================= -->
 
-  <div class="chart-layout">
-    <apx-chart
+    <apx-chart  class="chart-layout"
       [title]      = "chartOptions.title"
       [chart]      = "chartOptions.chart"
       [series]     = "chartOptions.series"
@@ -35,6 +34,6 @@
       [xaxis]      = "chartOptions.xaxis"
       [colors]     = "chartOptions.colors"
       [yaxis]      = "chartOptions.yaxis"
+      [grid]       = "chartOptions.grid"
     ></apx-chart>
-  </div>
 </div>
