--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.html
@@ -48,6 +48,7 @@
 
 <mat-menu #dropMenu="matMenu">
   <button mat-menu-item (click)="onMenuToTrading()"     >{{menu('toTrading')}}</button>
+  <button mat-menu-item (click)="onMenuEdit()"          >{{menu('edit')}}</button>
   <button mat-menu-item (click)="onMenuFilter()"        >{{menu('filter')}}</button>
   <button mat-menu-item (click)="onMenuDocumentation()" >{{menu('documentation')}}</button>
   <button mat-menu-item (click)="onMenuDeleteTrades()"  >{{menu('deleteTrades')}}</button>
