--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.scss
@@ -33,7 +33,7 @@
 
 //=============================================================================
 
-input-text-required, select-required, input-number-required {
+input-text-required, select-required, input-number-required, text-selector {
   width: 100%;
 }
 
