--- a/src/app/component/form/root-product-selector/root-product-selector.dialog.scss
+++ b/src/app/component/form/root-product-selector/root-product-selector.dialog.scss
@@ -1,40 +1,44 @@
 //=============================================================================
 //===
-//=== Copyright (C) 2024 Andrea Carboni
+//=== Copyright (C) 2025 Andrea Carboni
 //===
 //=== Use of this source code is governed by an MIT-style license that can be
 //=== found in the LICENSE file
 //=============================================================================
 
 .main-layout {
+  display        : flex;
+  flex-direction : column;
+  flex-wrap      : nowrap;
+  justify-content: flex-start;
+  align-items    : stretch;
+  gap            : 8px;
+  overflow       : hidden;
+  min-height     : 800px;
+}
+
+//=============================================================================
+
+.search-layout {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
-  align-items: stretch;
+  align-items: center;
   gap: 8px;
-  height   : 100%;
-  overflow: hidden;
 }
 
 //=============================================================================
 
-.form-layout {
+.search-field {
+  flex: 1 1 auto;
+}
+
+//=============================================================================
+
+.table-panel {
   flex: 1 1 auto;
   overflow: auto;
-  padding: 0 8px 0 8px;
-}
-
-//=============================================================================
-
-.buttons-layout {
-  text-align: center;
-}
-
-//=============================================================================
-
-input-text-required, select-required, text-selector {
-  width: 100%;
 }
 
 //=============================================================================
