--- a/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.html
@@ -8,12 +8,14 @@
                           [list]="connections"
                           (keyChange)="onConnectionChange($event)"></select-required>
     <br/>
-    <div *ngIf="status == Status.Local">
-      <input-text-required   #pdSymbolCtrl   [label]="mod('symbol')"       [(value)]="pd.symbol"      [len]="16"></input-text-required><br/>
-      <input-text-required   #pdNameCtrl     [label]="mod('name')"         [(value)]="pd.name"        [len]="64"></input-text-required><br/>
-      <select-required       #pdMarketCtrl   [label]="mod('marketType')"   [(key)]  ="pd.marketType"  [map]="markets"></select-required><br/>
-      <select-required       #pdProductCtrl  [label]="mod('productType')"  [(key)]  ="pd.productType" [map]="products"></select-required><br/>
-      <select-required       #pdExchangeCtrl [label]="mod('exchangeCode')" [(key)]  ="pd.exchangeId"  keyField="id" valueField="code" [list]="exchanges"></select-required>
+    <div *ngIf="status != Status.Selecting">
+      <text-selector                                          [label]="mod('symbol')"       [(value)]="pd.symbol" (click)="onSearch()" *ngIf="status == Status.Inventory"></text-selector>
+      <input-text-required   #pdSymbolCtrl    [label]="mod('symbol')"       [(value)]="pd.symbol"      [len]="16" *ngIf="status == Status.Local"></input-text-required>
+      <br/>
+      <input-text-required   #pdNameCtrl      [label]="mod('name')"         [(value)]="pd.name"        [len]="64"></input-text-required><br/>
+      <select-required       #pdMarketCtrl      [label]="mod('marketType')"   [(key)]  ="pd.marketType"  [map]="markets"></select-required><br/>
+      <select-required       #pdProductCtrl     [label]="mod('productType')"  [(key)]  ="pd.productType" [map]="products"></select-required><br/>
+      <select-required       #pdExchangeCtrl    [label]="mod('exchangeCode')" [(key)]  ="pd.exchangeId"  keyField="id" valueField="code" [list]="exchanges"></select-required>
     </div>
   </div>
 
