--- a/src/app/component/form/preset-product-selector/preset-product-selector.dialog.scss
+++ b/src/app/component/form/preset-product-selector/preset-product-selector.dialog.scss
@@ -12,3 +12,9 @@
 }
 
 //=============================================================================
+
+.filter-mode {
+  width: 300px;
+}
+
+//=============================================================================
