--- a/src/app/layout/header-panel/header-panel.scss
+++ b/src/app/layout/header-panel/header-panel.scss
@@ -12,7 +12,8 @@
   //  border-bottom: solid #F37C40;
 
   background-color: #FFFFFF;
-  border-bottom: solid #505AC2;
+  border-bottom: solid #04294D;
+//  border-bottom: solid #505AC2;
 }
 //=============================================================================
 
