--- a/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.scss
@@ -38,3 +38,22 @@ input-text-required, select-required, text-selector {
 }
 
 //=============================================================================
+
+.contracts-style {
+  font-weight: bolder;
+}
+
+//=============================================================================
+
+table {
+  width: 100%;
+}
+
+//=============================================================================
+
+.column-style {
+  width: 50%;
+}
+
+//=============================================================================
+
