--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
@@ -50,8 +50,20 @@
       <flex-table #table
                   [columns]       = "columns"
                   [dataProvider]  = "service"
-                  (onRowsSelected)="onRowSelected($event)"
-      ></flex-table>
+                  [filter]        = "tableFilter"
+                  (onRowsSelected)="onRowSelected($event)">
+        <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selContractType">
+          <mat-button-toggle value="*"    (change)="onFilterChange()">{{ loc("filters.all") }}</mat-button-toggle>
+          <mat-button-toggle value="reg"  (change)="onFilterChange()">{{ loc("filters.regular") }}</mat-button-toggle>
+          <mat-button-toggle value="cont" (change)="onFilterChange()">{{ loc("filters.continuous") }}</mat-button-toggle>
+        </mat-button-toggle-group>
+
+        <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selStatusType">
+          <mat-button-toggle value="*"    (change)="onFilterChange()">{{ loc("filters.all") }}</mat-button-toggle>
+          <mat-button-toggle value="stor" (change)="onFilterChange()">{{ loc("filters.stored") }}</mat-button-toggle>
+          <mat-button-toggle value="bad"  (change)="onFilterChange()">{{ loc("filters.bad") }}</mat-button-toggle>
+        </mat-button-toggle-group>
+      </flex-table>
     </mat-tab>
   </mat-tab-group>
 </div>
