--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.html
@@ -2,9 +2,9 @@
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
   <div>
-    <button mat-button (click)="onUploadClick()">{{button("upload")}}</button>
-    <button mat-button (click)="onChartClick()" [disabled]="disChart">{{button("chart")}}</button>
-    <button mat-button (click)="onDataClick()"  [disabled]="disData">{{button("data")}}</button>
+    <button mat-button (click)="onUploadClick()" [disabled]="pd.months!=''">{{button("upload")}}</button>
+    <button mat-button (click)="onChartClick()"  [disabled]="disChart">{{button("chart")}}</button>
+    <button mat-button (click)="onDataClick()"   [disabled]="disData">{{button("data")}}</button>
   </div>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
@@ -14,32 +14,64 @@
       <td>{{mod("symbol")}}</td>
       <td class="data-style">{{pd.symbol}}</td>
       <td class="separator-width"></td>
-      <td>{{mod("marketType")}}</td>
-      <td class="data-style">{{market}}</td>
+      <td>{{mod("months")}}</td>
+      <td class="data-style">{{pd.months}}</td>
+      <td class="separator-width"></td>
+      <td class="chart-style" rowspan="6">
+        <apx-chart
+          #mainChart
+          [series]     = "options.series"
+          [chart]      = "options.chart"
+          [plotOptions]= "options.plotOptions"
+          [labels]     = "options.labels"
+          [colors]     = "options.colors"
+        ></apx-chart>
+      </td>
     </tr>
 
     <tr>
       <td>{{mod("name")}}</td>
       <td class="data-style">{{pd.name}}</td>
       <td></td>
-      <td>{{mod("productType")}}</td>
-      <td class="data-style">{{product}}</td>
+      <td>{{mod("rollTrigger")}}</td>
+      <td class="data-style">{{pd.rolloverTrigger}}</td>
+      <td></td>
     </tr>
 
     <tr>
       <td>{{mod("connectionCode")}}</td>
       <td class="data-style">{{pd.connection?.code}}</td>
       <td></td>
-      <td>{{mod("createdAt")}}</td>
-      <td class="data-style">{{pd.createdAt}}</td>
+      <td>{{mod("marketType")}}</td>
+      <td class="data-style">{{market}}</td>
+      <td></td>
     </tr>
 
     <tr>
       <td>{{mod("exchangeCode")}}</td>
       <td class="data-style">{{pd.exchange?.code}}</td>
       <td></td>
+      <td>{{mod("productType")}}</td>
+      <td class="data-style">{{product}}</td>
+      <td></td>
+    </tr>
+
+    <tr>
+      <td>{{mod("timezone")}}</td>
+      <td class="data-style">{{pd.exchange?.timezone}}</td>
+      <td></td>
+      <td>{{mod("createdAt")}}</td>
+      <td class="data-style">{{pd.createdAt}}</td>
+      <td></td>
+    </tr>
+
+    <tr>
+      <td>{{mod("status")}}</td>
+      <td class="data-style">{{pd.status}}</td>
+      <td></td>
       <td>{{mod("updatedAt")}}</td>
       <td class="data-style">{{pd.updatedAt}}</td>
+      <td></td>
     </tr>
   </table>
 
@@ -48,22 +80,48 @@
   <mat-tab-group class="table-panel" [mat-stretch-tabs]="false">
     <mat-tab label="{{loc('instruments')}}">
       <flex-table #table
-                  [columns]       = "columns"
-                  [dataProvider]  = "service"
+                  [columns]       = "columnsStandard"
+                  [data]          = "dataStandard"
                   [filter]        = "tableFilter"
+                  (onRefresh)     = "reload()"
                   (onRowsSelected)="onRowSelected($event)">
-        <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selContractType">
+        <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selContractType" class="regular-filter">
           <mat-button-toggle value="*"    (change)="onFilterChange()">{{ loc("filters.all") }}</mat-button-toggle>
           <mat-button-toggle value="reg"  (change)="onFilterChange()">{{ loc("filters.regular") }}</mat-button-toggle>
           <mat-button-toggle value="cont" (change)="onFilterChange()">{{ loc("filters.continuous") }}</mat-button-toggle>
         </mat-button-toggle-group>
 
-        <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selStatusType">
+        <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selStatusType" class="store-filter">
           <mat-button-toggle value="*"    (change)="onFilterChange()">{{ loc("filters.all") }}</mat-button-toggle>
           <mat-button-toggle value="stor" (change)="onFilterChange()">{{ loc("filters.stored") }}</mat-button-toggle>
           <mat-button-toggle value="bad"  (change)="onFilterChange()">{{ loc("filters.bad") }}</mat-button-toggle>
         </mat-button-toggle-group>
       </flex-table>
     </mat-tab>
+
+    @if (pd.months != "") {
+      <mat-tab label="{{loc('rollover')}}">
+        <flex-table [columns]       = "columnsRollover"
+                    [data]          = "dataRollover"
+                    (onRefresh)     = "reload()"
+                    (onRowsSelected)="onRowSelected($event)"></flex-table>
+      </mat-tab>
+
+      <mat-tab label="{{loc('download')}}">
+        <flex-table [columns]       = "columnsDownload"
+                    [data]          = "dataDownload"
+                    (onRefresh)     = "reload()"
+                    (onRowsSelected)="onRowSelected($event)"></flex-table>
+      </mat-tab>
+    }
+
+    @if (pd.months == "") {
+      <mat-tab label="{{loc('ingestion')}}">
+        <flex-table [columns]       = "columnsIngestion"
+                    [data]          = "dataIngestion"
+                    (onRefresh)     = "reload()"
+                    (onRowsSelected)="onRowSelected($event)"></flex-table>
+      </mat-tab>
+    }
   </mat-tab-group>
 </div>
