--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.scss
@@ -32,8 +32,15 @@
 
 //=============================================================================
 
+.chart-style {
+  width: 200px;
+  //height: 100%;
+}
+
+//=============================================================================
+
 .separator-width {
-  width: 30%;
+  width: 20%;
 }
 
 //=============================================================================
@@ -41,6 +48,18 @@
 .table-panel {
   flex: 1 1 auto;
   overflow: auto;
+}
+
+//=============================================================================
+
+.regular-filter {
+  min-width : 210px;
+}
+
+//=============================================================================
+
+.store-filter {
+  min-width : 156px;
 }
 
 //=============================================================================
