--- a/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/view/product-data.view.scss
@@ -19,6 +19,18 @@
 
 //=============================================================================
 
+.buttons-layout {
+  margin-top: 4px;
+  margin-right: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 0;
+  width: 100%;
+}
+
+//=============================================================================
+
 .info-layout {
 //  width: 100%;
   margin: 16px;
@@ -60,6 +72,12 @@
 
 .store-filter {
   min-width : 156px;
+}
+
+//=============================================================================
+
+.spacer {
+  flex: 1 0 auto;
 }
 
 //=============================================================================
