--- a/src/app/module/performance-metrics/summary/summary.panel.scss
+++ b/src/app/module/performance-metrics/summary/summary.panel.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
-  align-items: stretch;
+  align-items: center;
   gap: 8px;
   height   : 100%;
   overflow: auto;
